[gd_scene load_steps=5 format=2]

[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RoomDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="RoomDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_right = -28.0
margin_bottom = -531.0
rect_min_size = Vector2( 958, 69 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 958, 69 )
color = Color( 0, 0, 0, 1 )

[node name="InfoLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_right = -248.0
custom_fonts/font = SubResource( 1 )
text = "[1] Hello world tuuna"
valign = 1

[node name="StatusLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 693.0
margin_right = -133.0
custom_fonts/font = SubResource( 1 )
text = "ready"
align = 2
valign = 1

[node name="JoinRoomBtn" type="Button" parent="."]
margin_left = 844.0
margin_top = 5.0
margin_right = 953.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "join"

[connection signal="pressed" from="JoinRoomBtn" to="." method="_on_JoinRoomBtn_pressed"]
